fix styling on mobile devices & bugs in code

--- a/styles/loading.css
+++ b/styles/loading.css
@@ -59,7 +59,7 @@ body {
 /* Add padding to container elements */
 .container {
     padding: 20px;
-    width:500px;
+    width:100%;
     position: absolute;
     left: 50%;
     top: 50%;
